tests/rosetta/out/C/arithmetic-numbers.error
cc: exit status 1
/tmp/arithmetic-numbers.c: In function ‘commatize’:
/tmp/arithmetic-numbers.c:123:37: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  123 |     out = slice_string(s, i, i + 1) + out;
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~ ^
      |           |
      |           char *
/tmp/arithmetic-numbers.c: In function ‘mochi_main’:
/tmp/arithmetic-numbers.c:208:19: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  208 |       line = line + pad3(arr.data[i + j]);
      |                   ^ ~~~~~~~~~~~~~~~~~~~~~
      |                     |
      |                     char *
/tmp/arithmetic-numbers.c:228:21: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  228 |            "\nThe " + commatize(x) + "th arithmetic number is: " + lastc);
      |            ~~~~~~~~ ^ ~~~~~~~~~~~~
      |            |          |
      |            char *     char *
/tmp/arithmetic-numbers.c:233:26: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  233 |     printf("%s\n", tmp17 + commatize(comp) + ".");
      |                          ^ ~~~~~~~~~~~~~~~
      |                            |
      |                            char *
