tests/rosetta/out/C/arithmetic-numbers.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:47Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:47Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
list_int sieve(int limit) {
  list_int spf = list_int_create(0);
  int i = 0;
  while (i <= limit) {
    int tmp1_data[1];
    list_int tmp1 = {1, tmp1_data};
    tmp1.data[0] = 0;
    list_int tmp2 = concat_list_int(spf, tmp1);
    spf = tmp2;
    i = i + 1;
  }
  i = 2;
  while (i <= limit) {
    if (spf.data[i] == 0) {
      spf.data[i] = i;
      if (i * i <= limit) {
        int j = i * i;
        while (j <= limit) {
          if (spf.data[j] == 0) {
            spf.data[j] = i;
          }
          j = j + i;
        }
      }
    }
    i = i + 1;
  }
  return spf;
}

list_int primesFrom(list_int spf, int limit) {
  list_int primes = list_int_create(0);
  int i = 3;
  while (i <= limit) {
    if (spf.data[i] == i) {
      int tmp3_data[1];
      list_int tmp3 = {1, tmp3_data};
      tmp3.data[0] = i;
      list_int tmp4 = concat_list_int(primes, tmp3);
      primes = tmp4;
    }
    i = i + 1;
  }
  return primes;
}

char *pad3(int n) {
  char *tmp5 = _str(n);
  char *s = tmp5;
  while (strlen(s) < 3) {
    char *tmp6 = concat_string(" ", s);
    s = tmp6;
  }
  return s;
}

char *commatize(int n) {
  char *tmp7 = _str(n);
  char *s = tmp7;
  char *out = "";
  int i = strlen(s) - 1;
  int c = 0;
  while (i >= 0) {
    out = slice_string(s, i, i + 1) + out;
    c = c + 1;
    if (c % 3 == 0 && i > 0) {
      char *tmp8 = concat_string(",", out);
      out = tmp8;
    }
    i = i - 1;
  }
  return out;
}

int primeCount(list_int primes, int last, list_int spf) {
  int lo = 0;
  int hi = primes.len;
  while (lo < hi) {
    int mid = (int)(((lo + hi) / 2));
    if (primes.data[mid] < last) {
      lo = mid + 1;
    } else {
      hi = mid;
    }
  }
  int count = lo + 1;
  if (spf.data[last] != last) {
    count = count - 1;
  }
  return count;
}

list_int arithmeticNumbers(int limit, list_int spf) {
  list_int arr = list_int_create(1);
  arr.data[0] = 1;
  int n = 3;
  while ((1 < limit)) {
    if (spf.data[n] == n) {
      int tmp9_data[1];
      list_int tmp9 = {1, tmp9_data};
      tmp9.data[0] = n;
      list_int tmp10 = concat_list_int(arr, tmp9);
      arr = tmp10;
    } else {
      int x = n;
      int sigma = 1;
      int tau = 1;
      while (x > 1) {
        int p = spf.data[x];
        if (p == 0) {
          p = x;
        }
        int cnt = 0;
        int power = p;
        int sum = 1;
        while (x % p == 0) {
          x = ((double)x) / ((double)p);
          cnt = cnt + 1;
          sum = sum + power;
          power = power * p;
        }
        sigma = sigma * sum;
        tau = tau * (cnt + 1);
      }
      if (sigma % tau == 0) {
        int tmp11_data[1];
        list_int tmp11 = {1, tmp11_data};
        tmp11.data[0] = n;
        list_int tmp12 = concat_list_int(arr, tmp11);
        arr = tmp12;
      }
    }
    n = n + 1;
  }
  return arr;
}

int mochi_main() {
  int limit = 1228663;
  list_int spf = sieve(limit);
  list_int primes = primesFrom(spf, limit);
  list_int arr = arithmeticNumbers(1000000, spf);
  printf("The first 100 arithmetic numbers are:\n");
  int i = 0;
  while (i < 100) {
    char *line = "";
    int j = 0;
    while (j < 10) {
      line = line + pad3(arr.data[i + j]);
      if (j < 9) {
        char *tmp13 = concat_string(line, " ");
        line = tmp13;
      }
      j = j + 1;
    }
    printf("%s\n", line);
    i = i + 10;
  }
  list_int tmp14 = list_int_create(4);
  tmp14.data[0] = 1000;
  tmp14.data[1] = 10000;
  tmp14.data[2] = 100000;
  tmp14.data[3] = 1000000;
  for (int tmp15 = 0; tmp15 < 4; tmp15++) {
    int x = tmp14.data[tmp15];
    int last = arr.data[x - 1];
    char *lastc = commatize(last);
    printf("%s\n",
           "\nThe " + commatize(x) + "th arithmetic number is: " + lastc);
    int pc = primeCount(primes, last, spf);
    int comp = x - pc - 1;
    char *tmp16 = concat_string("The count of such numbers <= ", lastc);
    char *tmp17 = concat_string(tmp16, " which are composite is ");
    printf("%s\n", tmp17 + commatize(comp) + ".");
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
